--- a/frontend/src/index/App.css
+++ b/frontend/src/index/App.css
@@ -2,10 +2,13 @@ body {
   font-family: 'Libre Franklin', sans-serif;
   padding: 0;
   margin: 0;
+  color: #222;
+  background-color: hsla(0, 0%, 94%, 1);
 }
 
 h3 {
   font-size: 24px;
   font-weight: 300;
   margin-bottom: 5px;
+  margin-top: 0;
 }
