--- a/frontend/src/index/App.css
+++ b/frontend/src/index/App.css
@@ -9,6 +9,11 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  color: #222;
+  text-decoration: none;
+}
+
 h3 {
   font-size: 24px;
   font-weight: 300;
